--- a/app/views/prod_returns/show.html.erb
+++ b/app/views/prod_returns/show.html.erb
@@ -1,5 +1,5 @@
+<div class="pull-right"> <%= link_to "Edytuj", edit_prod_return_path(@ret), class: "btn btn-primary" %></div>
 <h3 class="center"> Szczegóły zwrotu </h3><br>
-
 <div class="row">
 	<div class="span8">
 		<table class="table table-striped table-hover">
