--- a/app/views/shared/_attachment_link.html.erb
+++ b/app/views/shared/_attachment_link.html.erb
@@ -1,7 +1,7 @@
 <% if (prod_return.image.url != "rails.png") %>
 	<%= link_to( image_tag("link-01.svg",class:"icon_small"), prod_return.image.url, target: "_blank", id:"attmnt#{prod_return.id}") %>
 <% else %>
-	<button data-html="true" type="button" class="popover<%=prod_return.id%> btn btn-small" data-toggle="popover" data-placement="bottom" title="Wybiez plik" data-content='<%= render partial:"shared/file_form_popover", locals:{prod_return:prod_return}%>'>Dadaj zalacznik</button>
+	<button id="addAttmnt<%=prod_return.id%>" data-html="true" type="button" class="popover<%=prod_return.id%> btn btn-small" data-toggle="popover" data-placement="bottom" title="Wybiez plik" data-content='<%= render partial:"shared/file_form_popover", locals:{prod_return:prod_return}%>'>Dadaj zalacznik</button>
 	<script type="text/javascript">
 		$(document).ready(function() {
 		  $(".popover<%=prod_return.id%>").popover();
