--- a/app/views/shared/_status_modal.html.erb
+++ b/app/views/shared/_status_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h5 class="modal-title" id="myModalLabel">
-			<%= form_for(prod_return) do |f|%>
+			<%= form_for(prod_return, url: change_status_prod_return_path(prod_return)) do |f|%>
         	Zmień status z <%= "#{ApplicationHelper::ReturnsStatus.key(prod_return.status)}" %> na <%= f.select :status, options_for_select(ApplicationHelper::ReturnsStatus.keys.to_a.map {|z| [z]}, next_status(prod_return.status)), {}, {id:"select#{prod_return.id}", onchange:"updateCommentMsg('select#{prod_return.id}', 'content#{prod_return.id}')"} %>
         </h5>
       </div>
