--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag "application", media: "all" %>
   <%= javascript_include_tag "application" %>
-  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"> -->
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
@@ -57,11 +57,6 @@ function updateCommentMsg(id_source, id_target) {
     document.getElementById(id_target).value = text;
     document.getElementById("qwe").innerHTML = text;
 }
-
-
-
-
 </script>
-
 </body>
 </html>
