--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,29 @@
 <div>
 	<% if signed_in? %>
 		<div >
-			<div class="pull-right"> <%= link_to "Dodaj nowy ticket zwrotu", new_prod_return_path, class: "btn btn-primary" %></div>
+			<div class="pull-right">
+				<span class="new_action" style="width: 800px">
+				<span class="tools-group"> 
+				<span class="tools_icon">
+				<%= link_to("#", class: "btn btn-default", disabled:true) do%>
+					<span class="glyphicon glyphicon-tasks"></span>
+				<% end %>
+				</span>
+				<span hidden class="tools">
+					<%= link_to("#", class: "btn btn-default tools-edit") do%>
+						<span class="glyphicon glyphicon-edit"></span> Edytuj zaznaczone
+					<% end %>
+					<%= link_to("#", class: "btn btn-default tools-delete") do%>
+						<span class="glyphicon glyphicon-trash"></span> Usuń zaznaczone
+					<% end %>
+					<%= link_to("#", class: "btn btn-default") do%>
+						<span class="glyphicon glyphicon-trash"></span> Usuń zaznaczone załączniki <span class="glyphicon glyphicon-picture"></span>
+					<% end %>
+				</span>
+				</span>
+				<span><%= link_to "Dodaj nowy ticket zwrotu", new_prod_return_path, class: "btn btn-primary" %></span>
+				</span>
+			</div>
 			<ul class="nav nav-tabs products_auctions_tabs">
 				<li class="active"><a class="btn btn-default all" role="button" data-toggle="tab" href="#all">Wszystkie</a></li>
 				<li><a data-toggle="tab" href="#received" class="btn btn-default received" role="button">Przyjete</a></li>
@@ -31,3 +53,6 @@
 		</div>
 	<% end %>
 </div>
+
+
+<div id="h01">zxc</div>
