--- a/app/assets/stylesheets/prod_returns.css.scss
+++ b/app/assets/stylesheets/prod_returns.css.scss
@@ -57,7 +57,7 @@
 	background-color: #E29C73;
 }
 .status3 {
-	/*background-image: none;*/
+	background-image: none;
 	background-color: #96F25C;
 }
 .status_selected {
@@ -87,14 +87,6 @@ td {
 		width: 30px !important;
 	}
 }
-.fade {
-   opacity: 0;
-   -webkit-transition: opacity 0.1s linear;
-      -moz-transition: opacity 0.1s linear;
-       -ms-transition: opacity 0.1s linear;
-        -o-transition: opacity 0.1s linear;
-           transition: opacity 0.001s linear;
- }
 #check_action {
 	width: 16px !important;
 	height: 16px !important;
