finish home-page tools

--- a/app/views/prod_returns/edit.html.erb
+++ b/app/views/prod_returns/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title,'Edytuj zwrot') %>
-
+<h3 class="center">Edytuj zwrot</h3>
 <div class="row">
 	<%= form_for @ret, :html => { :multipart => true } do |f| %>
 	<div class="offset3 span5">
