--- a/app/views/shared/_comments_modal.html.erb
+++ b/app/views/shared/_comments_modal.html.erb
@@ -1,8 +1,7 @@
-<% if (!all.include?(prod_return)) || first_tab %>
-<button class="btn btn-small comment" data-toggle="modal" data-target=<%= "#myModal#{prod_return.id}" %> id=<%="btn_comment#{prod_return.id}"%>>
+<button class="btn btn-small comment" data-toggle="modal" data-target=<%= "#myModal#{prod_return.id}_#{tab}" %> id=<%="btn_comment#{prod_return.id}"%>>
  <span class="glyphicon glyphicon-comment"></span> <%= "#{prod_return.comments[0].content[0..23]}..." %>
 </button>
-<div class="modal fade" id=<%= "myModal#{prod_return.id}" %> tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal hide" id=<%= "myModal#{prod_return.id}_#{tab}" %> tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -18,8 +17,3 @@
     </div>
   </div>
 </div>
-<% else %>
-  <%= link_to("#", class: "btn btn-default", id:"btn_redirect_#{prod_return.id}") do%>
-    Ale to juz bylo
-  <% end %>
-<% end %>
