--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,13 +11,13 @@
 				<% end %>
 				</span>
 				<span hidden class="tools">
-					<%= link_to("#", class: "btn btn-default tools-edit") do%>
+					<%= link_to("#", class: "btn btn-default tools-edit", id:"tools_edit") do%>
 						<span class="glyphicon glyphicon-edit"></span> Edytuj zaznaczone
 					<% end %>
-					<%= link_to("#", class: "btn btn-default tools-delete") do%>
+					<%= link_to("#", class: "btn btn-default tools-delete", id:"tools_delete") do%>
 						<span class="glyphicon glyphicon-trash"></span> Usuń zaznaczone
 					<% end %>
-					<%= link_to("#", class: "btn btn-default") do%>
+					<%= link_to("#", class: "btn btn-default", id:"tools_delete_att") do%>
 						<span class="glyphicon glyphicon-trash"></span> Usuń zaznaczone załączniki <span class="glyphicon glyphicon-picture"></span>
 					<% end %>
 				</span>
@@ -33,16 +33,16 @@
 			</ul>
 			<div class="tab-content">
 				<div id="all" class="tab-pane active">
-					<%= render partial: 'shared/tab_table', locals:{returns:@all, all:@all, first_tab: true} %>
+					<%= render partial: 'shared/tab_table', locals:{returns:@all, tab:"all"} %>
 				</div>
 				<div id="received" class="tab-pane">
-					<%= render partial: 'shared/tab_table', locals:{returns:@received, all:@all, first_tab: false} %>
+					<%= render partial: 'shared/tab_table', locals:{returns:@received, tab:"rec"} %>
 				</div>
 				<div id="ready_to_send" class="tab-pane">
-					<%= render partial: 'shared/tab_table', locals:{returns:@ready_to_send, all:@all, first_tab: false} %>
+					<%= render partial: 'shared/tab_table', locals:{returns:@ready_to_send, tab:"ready"} %>
 				</div>
 				<div id="sent" class="tab-pane">
-					<%= render partial: 'shared/tab_table', locals:{returns:@sent, all:@all, first_tab: false} %>
+					<%= render partial: 'shared/tab_table', locals:{returns:@sent, tab:"sent"} %>
 				</div>
 			</div>
 		</div>
