--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <li>
 	<div class="panel panel-default">
-	  <div class="panel-heading"><%= link_to "#{comment.user.name}: ", comment.user %></div>
+	  <div class="panel-heading"><%= link_to "#{comment.user.name}: ", comment.user %> <small class="right"> <%= "#{comment.created_at.getlocal.to_formatted_s(:short)}" %> </small></div>
 	  <div class="panel-body">
 	    <%= comment.content %>
 	  </div>
