--- a/app/views/prod_returns/show.html.erb
+++ b/app/views/prod_returns/show.html.erb
@@ -20,14 +20,12 @@
 				<td> <%= @ret.status %> </td>
 			</tr>
 		</table>
-		<table class="table table-striped table-hover">
-			<tr>
-				<th> <div class="center">Informacje od klienta </div></th>
-			</tr>
-			<tr>
-				<td><%= simple_format(@ret.client_msg) %> </td>
-			</tr>
-		</table>
+		<div class="panel panel-default">
+			<div class="panel-heading">Wiadomość od klienta</div>
+			<div class="panel-body">
+				<%= simple_format(@ret.client_msg, class:"word-wrap") %>
+	  		</div>
+		</div> 
 	</div>
 	<div class="span8 pull-right">
 		<table class="table table-striped">
