add new status, button and archive

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -300,6 +300,14 @@ footer ul li {
 	border-top: 5px solid #96F25C !important;
 	background-image: none !important;
 }
+.cash_back {
+	border-top: 5px solid #905D9E !important;
+	background-image: none !important;
+}
+.exchange {
+	border-top: 5px solid #B39669 !important;
+	background-image: none !important;
+}
 .nav-tabs > li > a{
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
