--- a/app/views/shared/_status_modal.html.erb
+++ b/app/views/shared/_status_modal.html.erb
@@ -8,12 +8,12 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h5 class="modal-title" id="myModalLabel">
 			<%= form_for(prod_return, url: change_status_prod_return_path(prod_return)) do |f|%>
-        	Zmień status z <%= "#{ApplicationHelper::ReturnsStatus.key(prod_return.status)}" %> na <%= f.select :status, options_for_select(ApplicationHelper::ReturnsStatus.keys.to_a.map {|z| [z]}, next_status(prod_return.status)), {}, {id:"select#{prod_return.id}", onchange:"updateCommentMsg('select#{prod_return.id}', 'content#{prod_return.id}')"} %>
+        	Zmień status z <%= "#{ApplicationHelper::ReturnsStatus.key(prod_return.status)}" %> na <%= f.select :status, options_for_select(ApplicationHelper::ReturnsStatus.keys.to_a.map {|z| [z]}, next_status(prod_return.status)), {}, {id:"#{tab}select#{prod_return.id}", onchange:"updateCommentMsg('#{tab}select#{prod_return.id}', '#{tab}content#{prod_return.id}')"} %>
         </h5>
       </div>
       <div class="modal-body">
       		<%= fields_for prod_return.comments.build do |c|%>
-				<%= c.text_area :content, value:generate_status_message(prod_return.status), :rows => 4, :style => 'width: 90%', id:"content#{prod_return.id}", oninput:"textLengthLimit('content#{prod_return.id}','textLength#{prod_return.id}','200')" %> <div id=<%="textLength#{prod_return.id}"%>></div>
+				<%= c.text_area :content, value:generate_status_message(prod_return.status), :rows => 4, :style => 'width: 90%', id:"#{tab}content#{prod_return.id}", oninput:"textLengthLimit('#{tab}content#{prod_return.id}','#{tab}textLength#{prod_return.id}','200')" %> <div id=<%="#{tab}textLength#{prod_return.id}"%>></div>
 			<% end %>
       </div>
       <div class="modal-footer">
