--- a/app/views/prod_returns/edit.html.erb
+++ b/app/views/prod_returns/edit.html.erb
@@ -2,7 +2,7 @@
 <h3 class="center">Edytuj zwrot</h3>
 <div class="row">
 	<%= form_for @ret, :html => { :multipart => true } do |f| %>
-	<div class="offset3 span5">
+	<div class="offset1 span5">
 		<div class="input-group">
 			<span >Tytuł aukcji: </span>
 			<%= f.text_field :auction_name %>
@@ -20,10 +20,16 @@
 			<%= f.text_area :client_msg, :rows => 7, :style => 'width: 100%' %>
 		</div>
 	</div>
-		<div class="offset1 span6">
-			<%= link_to(image_tag(@ret.image.url(:medium)), @ret.image.url, :target => "_blank") %>
-			<div>Zmien załącznik:</div>
-			<%= f.file_field :image %>
+		<div class="offset1 span10">
+			<div class="row">
+				<h5 class="center"> <%= "Załączniki:" if !@ret.prattachments.length %> </h5>
+				<div id="files"><%= render partial:'prod_returns/attachments', collection:@ret.prattachments %></div>
+			</div>
+			<div class="row">
+				<br>
+				<h5>Dodaj załącznik:</h5>
+				<%= file_field_tag "files[]", type: :file, multiple: true %>
+			</div>
 		<br><br>
 		<div input-group>
 			<span class="input-group-btn "> <%= submit_tag "Gotowe", class:"btn btn-success"  %> </span>
