--- a/app/views/shared/_file_form_popover.html.erb
+++ b/app/views/shared/_file_form_popover.html.erb
@@ -1,4 +1,4 @@
 <%= form_for prod_return, :html => { :multipart => true } do |f| %>
-	<%= f.file_field :image, id:"file_field#{prod_return.id}" %>
+	<%= file_field_tag "files[]", type: :file, multiple: true %>
 	<%= submit_tag 'OK', class:'btn btn-success btn-small', id:"file_submit#{prod_return.id}"%>
 <% end %>
