--- a/app/views/shared/_attachment_link.html.erb
+++ b/app/views/shared/_attachment_link.html.erb
@@ -12,7 +12,7 @@
 		<% end %>
 	<% end %>
 <% else %>
-	<button id="addAttmnt<%=prod_return.id%>" data-html="true" type="button" class="popover<%=prod_return.id%> btn btn-small" data-toggle="popover" data-placement="bottom" title="Wybiez plik" data-content='<%= render partial:"shared/file_form_popover", locals:{prod_return:prod_return}%>'>Dadaj zalacznik</button>
+	<button id="addAttmnt<%=prod_return.id%>" data-html="true" type="button" class="popover<%=prod_return.id%> btn btn-small" data-toggle="popover" data-placement="left" title="Wybiez plik" data-content='<%= render partial:"shared/file_form_popover", locals:{prod_return:prod_return}%>'>Dadaj zalacznik</button>
 	<script type="text/javascript">
 		$(document).ready(function() {
 		  $(".popover<%=prod_return.id%>").popover();
