add database backup export

--- a/app/assets/stylesheets/prod_returns.css.scss
+++ b/app/assets/stylesheets/prod_returns.css.scss
@@ -58,11 +58,11 @@
 }
 .status3 {
 	background-image: none;
-	background-color: #96F25C;
+	background-color: #9FE374;
 }
 .status4 { /*zwrot gotowiki purple*/ 
 	background-image: none;
-	background-color: #905D9E;
+	background-color: #B284BF;
 }
 .status5 { /*wymiana brown*/
 	background-image: none;
