--- a/app/views/layouts/_header_base.html.erb
+++ b/app/views/layouts/_header_base.html.erb
@@ -1,14 +1,13 @@
-<header class="navbar navbar-inverse navbar-fixed-top">
-	<div class="navbar-inner">
+<header class="navbar navbar-fixed-top">
+	<div class="navbar-inner navbar-base">
 		<div>
-			<%= link_to "Lim-Trade Zwroty", returns_home_path, id: "logo" %>
+			<%= link_to "L&M Trade", root_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
 					<li><%= link_to "Główna", root_path %></li>
 					<% if signed_in? %>
-						<li><%= link_to "Archiwum", prod_returns_archive_path %></li>
 						<li id="fat-menu" class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Konto<b class="caret"></b></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Konto <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><%= link_to "Uzytkownik", current_user %></li>
 								<li class="divider"></li>
