small fixes in home pages; first steps in adding product db; new csv import for products

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -365,6 +365,10 @@ footer ul li {
     	text-shadow: 0 0 6px #eee;
 	}
 }
+.center-span {
+	margin: 100 auto !important;
+	float: none !important;
+}
 .navbar-base{
 	background-image: none !important;
 	background-color: $status_green;
