--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,25 +1,27 @@
 <% provide(:title, "Witamy" ) %>
 <% if signed_in? %>
-	<div class="row box center middle">
+	<div class="row box">
 	<div class="container-fluid"><div class="row">
-		<div class="span6"><div class="home_circles">
-			<%= link_to(returns_home_path) do %>
-				<%= image_tag('circle_01.svg') %>
-				<div class="overlay_text_center">Zwroty</div>
-			<% end %>
-		</div></div>
-		<div class="span6"><div class="home_circles">
-			<%= link_to(returns_home_path) do %>
-				<%= image_tag('circle_01.svg') %>
-				<div class="overlay_text_center">Zcinka</div>
-			<% end %>
-		</div></div>
-		<div class="span6"><div class="home_circles">
-			<%= link_to(returns_home_path) do %>
-				<%= image_tag('circle_01.svg') %>
-				<div class="overlay_text_center">Sprzedaż inna</div>
-			<% end %>
-		</div></div>
+		<div class="center-span">
+			<div class="span6"><div class="home_circles">
+				<%= link_to(returns_home_path) do %>
+					<%= image_tag('circle_01.svg') %>
+					<div class="overlay_text_center">Zwroty</div>
+				<% end %>
+			</div></div>
+			<div class="span6"><div class="home_circles">
+				<%= link_to(returns_home_path) do %>
+					<%= image_tag('circle_01.svg') %>
+					<div class="overlay_text_center">Zcinka</div>
+				<% end %>
+			</div></div>
+			<div class="span6"><div class="home_circles">
+				<%= link_to(returns_home_path) do %>
+					<%= image_tag('circle_01.svg') %>
+					<div class="overlay_text_center">Sprzedaż inna</div>
+				<% end %>
+			</div></div>
+		</div>
 	</div></div>
 	</div>
 <% else %>
