--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,6 +17,9 @@ html {
 	overflow-y: scroll;
 	padding: 0px;
 }
+body {
+	background-color: $body_background_color !important;
+}
 .fake-body {
 	padding-top: 60px;
 	padding-left: 50px;
