--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 				<% end %>
 			</div></div>
 			<div class="span6"><div class="home_circles">
-				<%= link_to(returns_home_path) do %>
+				<%= link_to(products_path) do %>
 					<%= image_tag('circle_01.svg') %>
 					<div class="overlay_text_center">Zcinka</div>
 				<% end %>
